--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Esto es Webpack",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack"
   },
   "keywords": [
     "webpack"
