--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:multi": "webpack --config ./multi-entry-points/webpack.config.js",
     "build:css": "webpack --config ./css-styles-loader/webpack.config.js",
     "build:plugins": "webpack --config ./plugins/webpack.config.js",
-    "build:dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js"
+    "build:dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js",
+    "build:babel": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js"
   },
   "keywords": [
     "webpack"
@@ -19,6 +20,9 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "@babel/core": "7.7.2",
+    "@babel/preset-env": "7.7.1",
+    "babel-loader": "8.0.6",
     "css-loader": "3.2.0",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.8.0",
