--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build:css": "webpack --config ./css-styles-loader/webpack.config.js",
     "build:plugins": "webpack --config ./plugins/webpack.config.js",
     "build:dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js",
-    "build:babel": "webpack-dev-server --config ./babel/webpack.config.js"
+    "build:babel": "webpack-dev-server --config ./babel/webpack.config.js",
+    "build:react": "webpack-dev-server  --config ./react/webpack.config.js"
   },
   "keywords": [
     "webpack"
@@ -19,12 +20,15 @@
   "author": "@nikosantis",
   "license": "MIT",
   "dependencies": {
-    "@babel/runtime": "7.7.2"
+    "@babel/runtime": "7.7.2",
+    "react": "16.12.0",
+    "react-dom": "16.12.0"
   },
   "devDependencies": {
     "@babel/core": "7.7.2",
     "@babel/plugin-transform-runtime": "7.6.2",
     "@babel/preset-env": "7.7.1",
+    "@babel/preset-react": "7.7.0",
     "babel-loader": "8.0.6",
     "css-loader": "3.2.0",
     "html-webpack-plugin": "3.2.0",
