--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:plugins": "webpack --config ./plugins/webpack.config.js",
     "build:dev": "webpack-dev-server --config ./webpack-dev-server/webpack.config.js",
     "build:babel": "webpack-dev-server --config ./babel/webpack.config.js",
-    "build:react": "webpack-dev-server  --config ./react/webpack.config.js"
+    "build:url-loader": "webpack-dev-server  --config ./url-loader/webpack.config.js"
   },
   "keywords": [
     "webpack"
@@ -31,9 +31,11 @@
     "@babel/preset-react": "7.7.0",
     "babel-loader": "8.0.6",
     "css-loader": "3.2.0",
+    "file-loader": "4.2.0",
     "html-webpack-plugin": "3.2.0",
     "mini-css-extract-plugin": "0.8.0",
     "style-loader": "1.0.0",
+    "url-loader": "2.2.0",
     "webpack": "4.41.2",
     "webpack-cli": "3.3.10",
     "webpack-dev-server": "3.9.0"
